--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -713,7 +713,7 @@
 
       var respecConfig = {
           // specification status (e.g. WD, LCWD, NOTE, etc.). If in doubt use ED.
-          specStatus:           "ED",
+          specStatus:           "CR",
           
           // the specification's short name, as in http://www.w3.org/TR/short-name/
           shortName:            "prov-o",
@@ -723,7 +723,7 @@
           //subtitle   :  "",
 
           // if you wish the publication date to be other than today, set this
-          publishDate:  "2012-11-19",
+          publishDate:  "2012-12-11",
 
           // if the specification's copyright date is a range of years, specify
           // the start date here:
@@ -739,6 +739,7 @@
 
           // if this is a LCWD, uncomment and set the end of its review period
           // lcEnd: "2012-09-18",
+          crEnd: "2013-01-31",
 
           // if you want to have extra CSS, append them to this list
           // it is recommended that the respec.css stylesheet be kept
